--- a/newtab.html
+++ b/newtab.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="newTabBookmarkApp">
 <head>
 <meta charset="utf-8"/>
 <title>New Tab</title>
 <link rel="stylesheet" href="bootstrap.min.css" />
 </head>
-<body>
+<body ng-controller="NewTabCtrl">
 
-<h1>New Tab</h1>
+<div class="container">
+    <div class="page-header">
+        new tab bookmarks
+    </div>
 
+    <div ng-repeat="top in tree">
+        <div ng-repeat="item in top.children" ng-include="'folders.html'"></div>
+    </div>
+</div>
 
+<script type="text/ng-template" id="folders.html">
+    <ol class="breadcrumb"><li>{{item.title}}</li></ol>
+    <div class="row">
+        <div ng-repeat="item in item.children | bookmarks" ng-include="'bookmarks.html'"></div>
+    </div>
+    <div ng-repeat="item in item.children | folders" ng-include="'folders.html'"></div>
+</script>
+
+<script type="text/ng-template" id="bookmarks.html">
+    <div class="col-md-3">
+        <a href="{{item.url}}" class="thumbnail">{{item.title}}</a>
+    </div>
+</script>
 
 </body>
 <script src="angular.min.js"></script>
