--- a/newtab.html
+++ b/newtab.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8"/>
 <title>New Tab</title>
 <link rel="stylesheet" href="bootstrap.min.css" />
+<link rel="stylesheet" href="app.css" />
 </head>
 <body ng-controller="NewTabCtrl">
 
