--- a/static/newtab.html
+++ b/static/newtab.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-  <script src="app.js"></script>
+<script src="vendor.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
