--- a/static/newtab.html
+++ b/static/newtab.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>New Tab</title>
+<link id="theme-stylesheet" rel="stylesheet"/>
 </head>
 <body>
 <script src="main.js"></script>
