--- a/static/newtab.html
+++ b/static/newtab.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="utf-8"/>
 <title>New Tab</title>
+<style>
+body { display: none; }
+</style>
 <link id="theme-stylesheet" rel="stylesheet"/>
 </head>
 <body>
