--- a/static/newtab.html
+++ b/static/newtab.html
@@ -3,12 +3,9 @@
 <head>
 <meta charset="utf-8"/>
 <title>New Tab</title>
-<style>
-body { display: none; }
-</style>
-<link id="theme-stylesheet" rel="stylesheet"/>
 </head>
 <body>
+<script src="react.min.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
