Build by webpack and update dependencies

--- a/static/newtab.html
+++ b/static/newtab.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <script src="react.min.js"></script>
-<script src="main.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
