Extract tile components

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <style>
+    body {
+      display: block;
+      margin: 0;
+      padding: 0;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+    </style>
   </head>
   <body>
     <div id="root"></div>
