Fix root background

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <style>
+    :root {
+      background-color: var(--palette-3);
+      color: var(--palette-03);
+    }
+
     body {
       display: block;
       margin: 0;
