Improve screen flicker on load

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>New Tab</title>
+    <style>
+      /* preload the initial value to avoid screen flicker */
+      @media (prefers-color-scheme: light) {
+        :root {
+          --palette-3: #fdfdfd;
+        }
+      }
+
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --palette-3: #2b2b2b;
+        }
+      }
+
+      :root {
+        background-color: var(--palette-3);
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
