--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>New Tab</title>
+    <style>
+      /* preload background-color to avoid screen flicker */
+      @media (prefers-color-scheme: light) {
+        :root {
+          background-color: #eee;
+        }
+      }
+
+      @media (prefers-color-scheme: dark) {
+        :root {
+          background-color: #111;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
