--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this extension.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
